--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 main {
-  
+  height: calc(100vh - 100px);
+  padding: 10px 1%;
+}
+
+.todo-input {
+  height: 40px;
+  box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
 }
